File upload works

--- a/public/home.pug
+++ b/public/home.pug
@@ -5,7 +5,7 @@ block head
 block body
     div.container.text-white
         form(action="/upload" enctype="multipart/form-data" method="POST")
-        div.form-group.text-left
-            input.form-element(type="file" name="file")
-        button.btn.btn-login(type="submit")
-            label="Upload"
+            div.form-group.text-left
+                input.form-element(type="file" name="upload" multiple)
+                input.btn.btn-login(type="submit" value="Submit")
+            
