--- a/public/home.pug
+++ b/public/home.pug
@@ -4,6 +4,12 @@ block head
 
 block body
     div.container.text-white
+        h1='Files Uploaded'
+        ul
+            each file in files
+                a(href='/delete/'+file.path)
+                    li=file.path
+    div.container.text-white
         form(action="/upload" enctype="multipart/form-data" method="POST")
             div.form-group.text-left
                 input.form-element(type="file" name="upload" multiple)
