--- a/public/base.pug
+++ b/public/base.pug
@@ -7,7 +7,7 @@ html(lang="en")
 		title=title
 		link(rel="stylesheet" type="text/css" href="/public/css/bootstrap.min.css")
 		block head
-	body.text-center.bg-dark
+	body.text-center
 		block body
 
 	script(src="/public/js/popper.min.js")
