--- a/public/home.pug
+++ b/public/home.pug
@@ -1,23 +1,49 @@
 extends base.pug
 
 block head
+    link(rel="stylesheet" href="/public/home.css" type="text/css")
 
 block body
-    div.container.text-white
-        h1='Files Uploaded'
-        h3 Click to Delete
-        ul
-            each file in files
-                li(onclick=`NotifyDelete("${file.path}");`)=file.path
-        h3 Click to Download
-        ul
-            each file in files
-                a(href='/download/'+file.path)
-                    li=file.path
-    div.container.text-white
-        form(action="/upload" enctype="multipart/form-data" method="POST")
-            div.form-group.text-left
-                input.form-element(type="file" name="upload" multiple required)
-                input.btn.btn-login(type="submit" value="Submit")
+
+    div.container.cover-container.d-flex.h-100.p-3.mx-auto.flex-column
+        header.masthead.mb-auto 
+            div.inner 
+                h3.masthead-brand Megathon 2018
+                    br
+                    img.img-icon(src="/public/logo_new.png")
+                nav.nav.nav-masthead.justify-content-center
+                    a.nav-link.active(href="/home") File Upload Portal
+                    a.nav-link(href="/login") Logout
+
+        main.inner.cover(role="main")
+                h1.cover-heading Uploaded Files
+                table.lead.table
+                    thead
+                        tr
+                            th File Name
+                            th Download
+                            th Delete
+                    tbody
+                    each file in files
+                        tr
+                            td=file.path
+                            td 
+                                a(href='/download/'+file.path)
+                                    button.btn.btn-warning Download
+                            td
+                                a(href="#" onclick=`NotifyDelete("${file.path}");`)
+                                    button.btn.btn-danger DELETE
+                form.lead(action="/upload" enctype="multipart/form-data" method="POST")
+                        div.custom-file
+                            input.custom-file-input(type="file" name="upload" id="upload" multiple required)
+                            label.custom-file-label.text-left(for="upload") Choose File   
+                            br
+                            button.btn.btn-lg.btn-submit(type="submit") Upload
+
+
+        footer.mastfoot.mt-auto
+            div.inner
+                p Made by ECell IIIT-H Tech Team
+                
 block script
     script(src="/public/js/home.js")
