--- a/public/signin.css
+++ b/public/signin.css
@@ -5,34 +5,25 @@ body {
 
 body {
   display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
-}
-
-.cover{
-  height: 100vh;
-  width:100%;
-}
-.overlay-text{
-  height: 100vh;
-  width: 100%;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+  background-color: #111628;
+  color: #bba559;
 }
 
 .form-signin {
   width: 100%;
   max-width: 330px;
   padding: 15px;
-  margin: auto;
-  
+  margin: 0 auto;
 }
 .form-signin .checkbox {
   font-weight: 400;
@@ -47,7 +38,7 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="text"] {
+.form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -57,25 +48,15 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
-
-.form-signin select {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-.form-element{
-  background:inherit;
-  border:unset;
-  color: white;
-}
-.form-element:hover, .form-group:hover{
-  color: yellow;
+.form-control{
+  background-color: none;
 }
 .btn-login{
-  background-color: inherit;
-  color: white;
+  background: none;
+  color:#bba559;
+  border:1px solid #bba559;
 }
 .btn-login:hover{
-  color: yellow;
+  background-color:#bba559;
+  color:#111628;
 }
-
