--- a/public/home.css
+++ b/public/home.css
@@ -86,8 +86,11 @@ body {
     margin-left: 1rem;
 }
 
-.nav-masthead .active {
+.nav-masthead .nav-link {
     color: #bba559;
+}
+
+.nav-masthead .active {
     border-bottom-color: #bba559;
 }
 
@@ -103,6 +106,11 @@ body {
 /*
  * Cover
  */
+
+p {
+    color: #bdb9b9;
+}
+
 .cover {
     padding: 0 1.5rem;
 }
@@ -116,13 +124,14 @@ body {
     padding: 0.3rem 0.5rem;
     background-color: transparent;
     color: #bba559;
-    border: 1px solid #bba559;
     cursor: pointer;
     outline: none;
     border: none;
 }
 
-table th {
+table th,
+td {
+    border-top: none !important;
     border-bottom: none !important;
 }
 
@@ -153,6 +162,12 @@ hr {
  */
 .mastfoot {
     color: rgba(255, 255, 255, 0.5);
+}
+
+.errorBlock {
+    padding: 20px;
+    width: 100%;
+    height: 100%;
 }
 
 @media (max-width: 768px) {
