--- a/public/home.pug
+++ b/public/home.pug
@@ -52,9 +52,7 @@ block body
         footer.mastfoot.mt-auto
             div.inner
                 p
-                    a(href="https://ecell.iiit.ac.in") Made by ECell IIIT-H Tech Team
-                    br
-                    | Thanks to <a href="https://fontawesome.com/license/free">FontAwesome 5</a> (used with changes)
+                    a(href="https://ecell.iiit.ac.in") Made by ECell IIIT Hyderabad Tech Team
                 
 block script
     script(src="/public/js/home.js")
