submission format added

--- a/public/home.pug
+++ b/public/home.pug
@@ -44,9 +44,13 @@ block body
                                 label.custom-file-label.text-left(for="upload") Choose File   
                             br
                             button.btn.btn-lg.btn-submit(type="submit") Upload
-                    p Please submit a single zip file, containing all your documents, images, etc.  Max file size is 50MB. For files of greater size, upload your files on Github or Google Drive, and add the repository link in code.txt.
-                        br
-                        | For help creating a zip file, see <a href="https://support.microsoft.com/en-in/help/14200/windows-compress-uncompress-zip-files">Windows</a>, <a href="https://support.apple.com/kb/ph25411?locale=en_GB">macOS</a>, and <a href="https://unix.stackexchange.com/questions/6596/how-do-i-zip-unzip-on-the-unix-command-line">Linux</a>.
+                    h3.submission Submission format
+                    ol
+                        li There is only one submission per team.
+                        li In case of more than one files, submit a single zip file, containing all your documents, images, etc.
+                        li Max file size is 50MB.
+                        li For files of greater size, upload your files on Github or Google Drive, and add the repository link in code.txt.
+                        li For help creating a zip file, see <a href="https://support.microsoft.com/en-in/help/14200/windows-compress-uncompress-zip-files">Windows</a>, <a href="https://support.apple.com/kb/ph25411?locale=en_GB">macOS</a>, and <a href="https://unix.stackexchange.com/questions/6596/how-do-i-zip-unzip-on-the-unix-command-line">Linux</a>.
                     
 
 
