--- a/public/home.css
+++ b/public/home.css
@@ -38,7 +38,6 @@ body {
     justify-content: center;
     color: #bba559;
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
 .cover-container {
@@ -94,21 +93,12 @@ body {
     border-bottom-color: #bba559;
 }
 
-@media (min-width: 48em) {
-    .masthead-brand {
-        float: left;
-    }
-    .nav-masthead {
-        float: right;
-    }
-}
-
 /*
  * Cover
  */
 
 p {
-    color: #bdb9b9;
+    color: #c7c7c7;
 }
 
 .cover {
@@ -170,8 +160,33 @@ hr {
     height: 100%;
 }
 
+ol, ul{
+    text-align: left;
+    color: #c7c7c7;
+}
+.submission{
+    margin-top: 10px;
+}
+
 @media (max-width: 768px) {
     .nav.nav.nav-masthead.justify-content-center {
         margin-top: 10px;
+    }
+
+    body, .cover-container{
+        height: fit-content !important;
+    }
+
+    .cover{
+        margin-top: 10px;        
+    }
+}
+
+@media (min-width: 48em) {
+    .masthead-brand {
+        float: left;
+    }
+    .nav-masthead {
+        float: right;
     }
 }
